--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Блог</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-$END$
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">MyWebsite</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/blog">Блог</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contacts">Контакты</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container mt-4">
+        <h1>Блог</h1>
+        <div class="blog-post">
+            <h2>Начало работы с Python</h2>
+            <p>Python - это универсальный и мощный язык программирования. В этом посте мы рассмотрим основы Python и то, как вы можете начать использовать его для веб-разработки. Python обладает простой и читаемой синтаксисом, что делает его идеальным для начинающих программистов. Вы узнаете, как установить Python, настроить рабочую среду и написать свою первую программу. Мы также рассмотрим основные типы данных, операторы и структуры управления, которые помогут вам в написании более сложных программ.</p>
+        </div>
+        <div class="blog-post">
+            <h2>Создание веб-приложений с Flask</h2>
+            <p>Flask - это легковесный WSGI веб-фреймворк. Он разработан с упором на простоту и гибкость. Этот пост поможет вам начать создание вашего первого веб-приложения с использованием Flask. Мы рассмотрим основные концепции Flask, такие как маршруты, шаблоны и обработка форм. Вы узнаете, как создать простое веб-приложение, которое будет обрабатывать GET и POST запросы, работать с базами данных и использовать шаблоны Jinja2 для динамического создания HTML-страниц. Также мы обсудим методы обеспечения безопасности и масштабируемости вашего приложения.</p>
+        </div>
+        <div class="blog-post">
+            <h2>Стилизация вашего сайта с Bootstrap</h2>
+            <p>Bootstrap - это популярный фронтенд-фреймворк для разработки адаптивных и мобильных веб-сайтов. Узнайте, как интегрировать Bootstrap в ваше Flask приложение, чтобы улучшить его внешний вид и функциональность. Мы рассмотрим, как использовать компоненты Bootstrap, такие как сетка, таблицы, формы, кнопки и навигационные панели. Вы научитесь создавать адаптивные дизайны, которые отлично выглядят на любых устройствах. Кроме того, мы обсудим возможности кастомизации Bootstrap с помощью переменных Sass, чтобы сделать ваш сайт уникальным и привлекательным.</p>
+        </div>
+    </div>
 </body>
 </html>
