--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Главная</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-$END$
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">MyWebsite</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog">Блог</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contacts">Контакты</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container mt-4">
+        <h1>Добро пожаловать на наш курс по разработке веб-сайтов</h1>
+        <p>Научитесь создавать сайты, используя Python, Flask и Bootstrap.</p>
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Программирование на Python</h2>
+                <img src="{{ url_for('static', filename='images/python.png') }}" alt="Python" class="img-fluid">
+                <p>Освойте основы программирования на Python и научитесь использовать его для веб-разработки. Python - это мощный язык программирования, который используется в самых разных областях, от веб-разработки до анализа данных и искусственного интеллекта. На этом курсе вы изучите основные концепции Python, включая переменные, условные выражения, циклы и функции. Также вы научитесь работать с библиотеками и модулями, которые значительно расширяют возможности языка.</p>
+            </div>
+            <div class="col-md-4">
+                <h2>Фреймворк Flask</h2>
+                <img src="{{ url_for('static', filename='images/flask.png') }}" alt="Flask" class="img-fluid">
+                <p>Откройте для себя возможности микрофреймворка Flask для создания веб-приложений. Flask - это легкий и гибкий фреймворк для разработки веб-приложений на Python. Он позволяет быстро создавать прототипы и готовые решения, сохраняя при этом простоту и понятность кода. В этом курсе вы научитесь создавать маршруты, обрабатывать запросы, работать с шаблонами и базами данных, а также узнаете, как обеспечить безопасность и масштабируемость ваших приложений.</p>
+            </div>
+            <div class="col-md-4">
+                <h2>Стилизация с Bootstrap</h2>
+                <img src="{{ url_for('static', filename='images/bootstrap.png') }}" alt="Bootstrap" class="img-fluid">
+                <p>Изучите, как использовать Bootstrap для создания адаптивных и привлекательных веб-страниц. Bootstrap - это популярный фронтенд-фреймворк, который облегчает создание стильных и адаптивных веб-сайтов. На этом курсе вы научитесь использовать компоненты Bootstrap, такие как сетки, кнопки, формы и навигационные панели, чтобы создавать современные и удобные интерфейсы. Также вы узнаете, как настраивать Bootstrap под свои нужды, используя препроцессоры CSS, такие как Sass и Less.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
