--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,32 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Контакты</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">MyWebsite</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/blog">Блог</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/contacts">Контакты</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-4">
-        <h1>Контакты</h1>
-        <p>Елизаров Олег Владимирович</p>
-        <p>Телефон: +7(925)147-12-22</p>
-        <p>Email: elizarov09@gmail.com</p>
-    </div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Контакты{% endblock %}
+
+{% block content %}
+    <h1>Контакты</h1>
+    <p>Елизаров Олег Владимирович</p>
+    <p>Телефон: +7(925)147-12-22</p>
+    <p>Email: elizarov09@gmail.com</p>
+{% endblock %}
